now fixed the center align

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,7 +6,7 @@ body {
     color: white;
 }
 
-h1 {
+header {
     text-align: center;
 }
 
